--- a/QLPhongMachTuWPF/View/AddAppointment.xaml
+++ b/QLPhongMachTuWPF/View/AddAppointment.xaml
@@ -119,15 +119,19 @@ Grid.Column="1" Panel.ZIndex="1"
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 200 0 0">
                     <!--Date of birth-->
-                    <ComboBox x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox x:Name="cmbDay"
+                              IsEditable="True"
+                              Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                               materialDesign:HintAssist.Hint="1"
                                FontSize="16"/>
 
-                    <ComboBox x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox x:Name="cmbMonth"
+                              IsEditable="True"
+                              Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
           materialDesign:HintAssist.Hint="1"
           FontSize="16" Margin="10 0 0 0"/>
 
-                    <ComboBox x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox x:Name="cmbYear" IsEditable="True" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 materialDesign:HintAssist.Hint="2000"
  FontSize="16" Margin="10 0 0 0"/>
 
@@ -144,15 +148,21 @@ materialDesign:HintAssist.Hint="2000"
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 300 0 0">
                     <!--Day appointment-->
-                    <ComboBox x:Name="cmbDayapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox x:Name="cmbDayapp"
+                              IsEditable="True"
+                              Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                               materialDesign:HintAssist.Hint="1"
                                FontSize="16"/>
 
-                    <ComboBox x:Name="cmbMonthapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox x:Name="cmbMonthapp"
+                              IsEditable="True"
+                              Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
           materialDesign:HintAssist.Hint="1"
           FontSize="16" Margin="10 0 0 0"/>
 
-                    <ComboBox x:Name="cmbYearapp" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox x:Name="cmbYearapp"
+                              IsEditable="True"
+                              Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 materialDesign:HintAssist.Hint="2000"
  FontSize="16" Margin="10 0 0 0"/>
                     <!--Gender-->
