--- a/QLPhongMachTuWPF/View/AddPatient.xaml
+++ b/QLPhongMachTuWPF/View/AddPatient.xaml
@@ -118,13 +118,14 @@
                     <!--Date of birth-->
                     <ComboBox x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                               materialDesign:HintAssist.Hint="1"
+                              IsEditable="True"
                                FontSize="16"/>
 
-                    <ComboBox x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox x:Name="cmbMonth" IsEditable="True" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
           materialDesign:HintAssist.Hint="1"
           FontSize="16" Margin="10 0 0 0"/>
 
-                    <ComboBox x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox x:Name="cmbYear" Width="110" IsEditable="True" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 materialDesign:HintAssist.Hint="2000"
  FontSize="16" Margin="10 0 0 0"/>
 
