--- a/QLPhongMachTuWPF/View/AddMedicineDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/AddMedicineDiagnosis.xaml
@@ -91,7 +91,7 @@ Grid.Column="1" Panel.ZIndex="1"
                     </Button.Background>
                 </Button>
                 <Border CornerRadius="0 10 0 0" Background="White"/>
-                <TextBlock Text="ADD MEDICINE" Style="{StaticResource titleText}"/>
+                <TextBlock Text="ADD DIAGNOSIS" Style="{StaticResource titleText}"/>
             </Grid>
 
             <!--Input-->
@@ -128,7 +128,7 @@ Style="{StaticResource MaterialDesignOutlinedTextBox}"
 Width="250" FontSize="16"/>
                     <!--Status-->
                     <ComboBox x:Name="cmbStatus" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
-materialDesign:HintAssist.Hint="Available"
+
  FontSize="16" Margin="60 0 0 0"/>
                 </StackPanel>
 
@@ -138,7 +138,7 @@ materialDesign:HintAssist.Hint="Available"
 
 
 
-                <Button Content="Add medicine"  Style="{StaticResource btnAdd}">
+                <Button Content="Add Diagnosis"  Style="{StaticResource btnAdd}">
 
                 </Button>
 
