--- a/QLPhongMachTuWPF/View/Diagnosis.xaml
+++ b/QLPhongMachTuWPF/View/Diagnosis.xaml
@@ -36,7 +36,7 @@
 
         <Button Grid.Row="0" Margin="0 10 40 10"  Style="{StaticResource addBtn}" Click="AddDiagnosisButton_Click">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Add Medicine" FontSize="15" FontWeight="Bold"/>
+                <TextBlock Text="Add Diagnosis" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
         </Button>
 
