modify add Staff

--- a/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
@@ -13,6 +13,6 @@
     <viewmodel:InvoiceVM x:Key="InvoiceVM"></viewmodel:InvoiceVM>
     <viewmodel:AddPatientVM x:Key="AddPatientVM"></viewmodel:AddPatientVM>
     <viewmodel:AddInvoiceVM x:Key="AddInvoiceVM"></viewmodel:AddInvoiceVM>
-    
+    <viewmodel:AddStaffsVM x:Key="AddStaffsVM"></viewmodel:AddStaffsVM>
 
 </ResourceDictionary> 
