--- a/QLPhongMachTuWPF/View/AddStaff.xaml
+++ b/QLPhongMachTuWPF/View/AddStaff.xaml
@@ -6,8 +6,9 @@
         xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
         mc:Ignorable="d"
         Title="AddStaff" Height="600" Width="800"
-                xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
+        DataContext="{StaticResource AddStaffsVM}"
+                xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:AddStaffsVM}"
+        WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
 
     <Window.Resources>
         <ResourceDictionary>
@@ -97,6 +98,7 @@ WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent"
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 90 0 0">
                     <!--name-->
                     <TextBox
+                        Text="{Binding Ten}"
                          VerticalAlignment="Center"
                          materialDesign:HintAssist.Hint="Name"
                          Style="{StaticResource MaterialDesignOutlinedTextBox}"
@@ -104,6 +106,7 @@ WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent"
 
                     <!--Phone-->
                     <TextBox
+                     Text="{Binding DienThoai}"
                     VerticalAlignment="Center"
                     materialDesign:HintAssist.Hint="Phone"
                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
@@ -117,6 +120,7 @@ WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent"
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 200 0 0">
                     <!--Date of birth-->
                     <ComboBox x:Name="cmbDay" Width="60" 
+                              Text ="{Binding Ngay}"
                               IsReadOnly="False"
                               IsEditable="True"
                               Style="{StaticResource MaterialDesignOutlinedComboBox}"
@@ -124,17 +128,21 @@ WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent"
                                FontSize="16"/>
 
                     <ComboBox x:Name="cmbMonth"
+                              Text="{Binding Thang}"
                               IsEditable="True"
                               Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
           materialDesign:HintAssist.Hint="1"
           FontSize="16" Margin="10 0 0 0"/>
 
-                    <ComboBox x:Name="cmbYear"  Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox x:Name="cmbYear" 
+                              Text="{Binding Nam}"
+                              Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 materialDesign:HintAssist.Hint="2000"
  FontSize="16" Margin="10 0 0 0" IsEditable="True"/>
 
                     <!--Address-->
                     <TextBox VerticalAlignment="Center"
+                                Text="{Binding DiaChi}"
                                 materialDesign:HintAssist.Hint="Address"
                                 Style="{StaticResource MaterialDesignOutlinedTextBox}"
                                 Width="250" Margin="60 0 0 0" FontSize="16"/>
@@ -145,16 +153,18 @@ materialDesign:HintAssist.Hint="2000"
 
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 300 0 0">
-                    <ComboBox x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding Gender}" x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
            FontSize="16"/>
-                    <ComboBox x:Name="cmbType" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding Type}" x:Name="cmbType" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
  FontSize="16" Margin="60 0 0 0"/>
                 </StackPanel>
+                
 
 
-
-                <Button Content="Add patient"  Style="{StaticResource btnAdd}">
+                <Button
+                    Command="{Binding AddStaffsCommand}"
+                    Content="Add patient"  Style="{StaticResource btnAdd}">
 
                 </Button>
 
