change datagrid visualization

--- a/QLPhongMachTuWPF/View/Lists.xaml
+++ b/QLPhongMachTuWPF/View/Lists.xaml
@@ -50,19 +50,25 @@
                 <DataGridTextColumn Header="Name" IsReadOnly="True" CanUserResize="False" Width="0.8*" Binding="{Binding TenThuoc }" />
                 <DataGridTextColumn Header="Unit" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="1*" Binding="{Binding DonViTinh}"/>
                 <DataGridTextColumn Header="Price" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="2*" Binding="{Binding Gia}"/>
-                <DataGridTextColumn Header="Status" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding TrangThai}"/>
-
-                <DataGridTemplateColumn Header="Action" IsReadOnly="True" CanUserResize="False" Width="100">
+               
+                <DataGridTemplateColumn Header="Status" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Button Style="{StaticResource gridEditBtn}">
-                                    <materialDesign:PackIcon Kind="Pencil" Width="20" Height="20"/>
-                                </Button>
-                                <Button Style="{StaticResource gridRemoveBtn}" Margin="5 0 0 0" >
-                                    <materialDesign:PackIcon Kind="Delete" Width="20" Height="20"/>
-                                </Button>
-                            </StackPanel>
+                            <TextBlock>
+                                <TextBlock.Style>
+                                    <Style TargetType="TextBlock">
+                                        <Setter Property="Text" Value="Unknown"/>
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding TrangThai}" Value="0">
+                                                <Setter Property="Text" Value="Unavailable"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding TrangThai}" Value="1">
+                                                <Setter Property="Text" Value="Available"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </TextBlock.Style>
+                            </TextBlock>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
